# torben-it-marketplace

.claude-plugin/: marketplace.json
plugins/tts/: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
plugins/tts/.claude-plugin/: plugin.json
plugins/tts/commands/: off.md  on.md  status.md  stop.md
plugins/tts/hooks/: hooks.json  read-response.sh  stop-playback.sh
plugins/tts/scripts/: ensure-installed.sh  release.sh
plugins/tts/skills/tts/: SKILL.md
plugins/tts/tts/: __init__.py  __main__.py  play.py  server.py
plugins/tts/tts/tools/: __init__.py  controls.py
