[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tts"
version = "3.0.4"
description = "Minimal TTS plugin for Claude Code - reads responses aloud"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "sounddevice",
]

[project.scripts]
tts = "tts.__main__:main"
